fixing the spacing on bottom of the logo
fixing the spacing on bottom of the logo

--- a/_inc/client/components/masthead/style.scss
+++ b/_inc/client/components/masthead/style.scss
@@ -7,7 +7,7 @@
 	flex-flow: row nowrap;
 
 	.jp-logo {
-		padding: rem( 5px );
+		padding: rem( 5px ) rem( 5px ) rem( 2px ) rem( 5px );
 	}
 
 	svg {
